--- a/index.html
+++ b/index.html
@@ -4,10 +4,221 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-  <div class="page">
+<body class="body">
+<div class="page">
+  <header class="header">
+    <div class="logo logo_place_header">
+      <img class="logo_place_header_image" src="/images/logo_place_header.svg" alt="Логотип ЯндексПрактикум">
+    </div>
+    <div class="header__title">
+      <h1 class="header__title_text" lang="ru">Научиться учиться</h1>
+    </div>
+    <div class="header__subtitle">
+      <p class="header__subtitle_text">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a class="header__link" href="#">Узнать &rarr;</a>
+      </p>
+    </div>
+    <div class="header__main-illustration">
+      <img class="header__main-illustration_image" src="/images/header-image.png" alt="Опять двойка">
+    </div>
+    <div class="header__square-pic"></div>
+  </header>
+  <main class="content">
+    <section id="description">
+      <div class="two-columns">
+        <div class="two-columns__brief">
+          <h6 class="two-columns__brief_text">Главные проблемы в обучении</h6>
+        </div>
+        <div class="two-columns__main-text">
+          <div class="two-columns__paragraph">
+            <p class="two-columns__paragraph_text">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
+              учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
+              дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            </p>
+          </div>
+          <div class="two-columns__paragraph">
+            <p class="two-columns__paragraph_text">
+              <span class="two-columns__span_accent">Вывод: </span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+          </div>
+          <div class="two-columns__paragraph">
+            <p class="two-columns__paragraph_text">
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
+              захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
+      </div>
 
-  </div>
+    </section>
+    <section class="digits">
+      <div class="section-title">
+        <h1 class="section-title_text">
+          Цифры и факты
+        </h1>
+      </div>
+      <div class="section-subtitle">
+        <h2 class="section-subtitle_text">
+          Про учебу и мозг
+        </h2>
+      </div>
+      <div class="table">
+        <ul class="flex-row">
+          <li class="table__cell">
+            <h2 class="table__heading">86 миллиардов</h2>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading">2.1 миллиарда</h2>
+            <p class="table__text">Число нуждающихся в повышении квалификации Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading">1000 терабайт</h2>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading">500 триллионов</h2>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+        </ul>
+        <ul class="flex-row">
+          <li class="table__cell">
+            <h2 class="table__heading">420 миллионов</h2>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+              Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading">17–20 лет</h2>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading">1885 год</h2>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading">1889 год</h2>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="feynman">
+      <div class="feynman__title">
+        <h1 class="feynman__title_text">Метод Фейнмана</h1>
+      </div>
+      <div class="feynman__subtitle">
+        <h2 class="feynman__subtitle_text">Выучить и не забыть.</h2>
+      </div>
+      <div class="feynman__link">
+        <a class="feynman__link_text" href="#">Подробнее &rarr;</a>
+      </div>
+      <div class="feynman__illustration">
+        <img class="feynman__illustration_image" src="images/feynman.png" alt="Фейнман">
+      </div>
+    </section>
+    <section class="kaufman">
+      <div class="section-title section-title_theme_dark">
+        <h1 class="section-title_text section-title_text_theme_dark">
+          Принципы обучения
+        </h1>
+      </div>
+      <div class="section-subtitle">
+        <h2 class="section-subtitle_text section-subtitle_text_theme_dark">
+          от Джоша Кауфмана
+        </h2>
+      </div>
+      <div class="table table_theme_dark">
+        <ul class="flex-row flex-row_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">1</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">2</h2>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">3</h2>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">4</h2>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">5</h2>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+        </ul>
+        <ul class="flex-row flex-row_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">6</h2>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">7</h2>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">8</h2>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">9</h2>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
+              интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">10</h2>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="kaufman__triangle">
+        <img class="kaufman__triangle_image" src="images/kaufman-triangle.svg" alt="Треугольник">
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer__columns">
+      <ul class="footer-row">
+        <li class="footer__column_content_copyright">
+          <div class="logo logo_place_footer">
+            <img class="logo_place_footer_image" src="images/logo_place_footer.svg" alt="Логотип ЯндексПрактикум">
+          </div>
+          <div class="footer__author">
+            <p class="footer__author_text">&copy; Виктор Абанькин</p>
+          </div>
+        </li>
+        <li class="footer__column_content_info">
+          <h2 class="footer__column-heading">О практикуме</h2>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
+          </div>
+        </li>
+        <li class="footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <a class="footer__column-link" href="#">
+            <img class="footer__social-icon" src="images/youtube-icon.svg" alt="youtube">YouTube
+          </a>
+          <a class="footer__column-link" href="#">
+            <img class="footer__social-icon" src="images/vk_color_white.svg" alt="vkontakte">ВКонтакте
+          </a>
+          <a class="footer__column-link footer__column_content_social_link" href="#">
+            <img class="footer__social-icon" src="images/tiktok-icon.svg" alt="tiktok">TikTok
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+</div>
 </body>
 </html>
