--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
         <li class="footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <a class="footer__column-link" href="#">
-            <img class="footer__social-icon" src="images/youtube-icon.svg" alt="youtube">YouTube
+            <img class="footer__social-icon" src="images/youtube-icon.svg" alt="иконка ютуб">YouTube
           </a>
           <a class="footer__column-link" href="#">
-            <img class="footer__social-icon" src="images/vk_color_white.svg" alt="vkontakte">ВКонтакте
+            <img class="footer__social-icon" src="images/vk_color_white.svg" alt="иконка вк">ВКонтакте
           </a>
           <a class="footer__column-link footer__column_content_social_link" href="#">
-            <img class="footer__social-icon" src="images/tiktok-icon.svg" alt="tiktok">TikTok
+            <img class="footer__social-icon" src="images/tiktok-icon.svg" alt="иконка тикток">TikTok
           </a>
         </li>
       </ul>
