Внес в проект правки

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="page">
   <header class="header">
     <div class="logo logo_place_header">
-      <img class="logo_place_header_image" src="/images/logo_place_header.svg" alt="Логотип ЯндексПрактикум">
+      <img class="logo_place_header_image" src="images/logo_place_header.svg" alt="Логотип ЯндексПрактикум">
     </div>
     <div class="header__title">
       <h1 class="header__title_text" lang="ru">Научиться учиться</h1>
@@ -23,7 +23,7 @@
       </p>
     </div>
     <div class="header__main-illustration">
-      <img class="header__main-illustration_image" src="/images/header-image.png" alt="Опять двойка">
+      <img class="header__main-illustration_image" src="images/header-image.png" alt="Опять двойка">
     </div>
     <div class="header__square-pic"></div>
   </header>
