--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 <body class="body">
 <div class="page">
@@ -17,7 +16,7 @@
       <a class="header__link" href="#">Узнать &rarr;</a>
     </p>
     <img class="header__main-illustration" src="images/header-image.png" alt="Картина Опять двойка">
-    <div class="header__square-pic"></div>
+    <div class="header__square-pic rotation__animation"></div>
   </header>
   <main class="content">
     <section id="description">
@@ -39,6 +38,69 @@
           </p>
         </div>
       </article>
+    </section>
+    <section class="techniques">
+      <h2 class="section-title">
+        Техники обучения
+      </h2>
+      <h3 class="section-subtitle">
+        Пять практик от Барбары Оакли
+      </h3>
+      <ul class="cards">
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-attention.png" alt="Книга в руках">
+          <h4 class="cards__title">Два вида внимания</h4>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </li>
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
+          <h4 class="cards__title">Recall</h4>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </li>
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-interliving.png" alt="Архитектура">
+          <h4 class="cards__title">Интерливинг</h4>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </li>
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-question.png" alt="Комната с дверьми">
+          <h4 class="cards__title">Вопросы</h4>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </li>
+        <li class="cards__item">
+          <img class="cards__image" src="images/cards-competence.png" alt="Книги">
+          <h4 class="cards__title">Иллюзия компетентности</h4>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </li>
+      </ul>
+    </section>
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+      <div class="video__iframes">
+        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+                src="https://www.youtube.com/embed/5MgBikgcWnY?color=white"
+                frameborder="0" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+                src="https://www.youtube.com/embed/arj7oStGLkU?color=white"
+                frameborder="0" allowfullscreen></iframe>
+      </div>
+    </section>
+    <section class="oakley">
+      <article class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">
+            С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+          </p>
+        </div>
+      </article>
+    </section>
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+      <a class="feynman__link" href="#">Подробнее &rarr;</a>
+      <img class="feynman__illustration" src="images/feynman.png" alt="Фейнман">
     </section>
     <section class="digits">
       <h2 class="section-title">
@@ -84,11 +146,20 @@
         </li>
       </ul>
     </section>
-    <section class="feynman">
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-      <a class="feynman__link" href="#">Подробнее &rarr;</a>
-      <img class="feynman__illustration" src="images/feynman.png" alt="Фейнман">
+    <section class="khan">
+      <div class="khan__container">
+        <h3 class="khan__author">Салман Хан</h3>
+        <h2 class="khan__title">Весь мир — школа</h2>
+        <p class="khan__quote">
+          Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+        </p>
+        <h4 class="khan__quote-author">Джордж Лукас</h4>
+        <h4 class="khan__quote-author-subline">Кинорежиссер, продюсер</h4>
+        <div class="khan__book-container">
+          <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка Салман Хан">
+          <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+        </div>
+      </div>
     </section>
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">
@@ -140,7 +211,25 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
-      <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Треугольник">
+      <img class="kaufman__triangle rotation__animation" src="images/kaufman-triangle.svg" alt="Треугольник">
+    </section>
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+      <div class="resources__logo-zone">
+        <a class="resources__link" href="#">
+          <img class="resources__logo" src="images/logo/resources-arzamas.svg">
+        </a>
+        <a class="resources__link" href="#">
+          <img class="resources__logo" src="images/logo/resources-n1.svg">
+        </a>
+        <a class="resources__link" href="#">
+          <img class="resources__logo" src="images/logo/resources-strelka.svg">
+        </a>
+        <a class="resources__link" href="#">
+          <img class="resources__logo" src="images/logo/resources-polka.svg">
+        </a>
+      </div>
     </section>
   </main>
   <footer class="footer">
