--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
       <h2 class="section-title">Видео нa TED</h2>
       <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
       <div class="video__iframes">
-        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+        <iframe class="video__iframe" id="ytplayer1" width="515" height="316"
                 src="https://www.youtube.com/embed/5MgBikgcWnY?color=white"
-                frameborder="0" allowfullscreen></iframe>
-        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+                allowfullscreen></iframe>
+        <iframe class="video__iframe" id="ytplayer2" width="515" height="316"
                 src="https://www.youtube.com/embed/arj7oStGLkU?color=white"
-                frameborder="0" allowfullscreen></iframe>
+                allowfullscreen></iframe>
       </div>
     </section>
     <section class="oakley">
@@ -218,16 +218,16 @@
       <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
       <div class="resources__logo-zone">
         <a class="resources__link" href="#">
-          <img class="resources__logo" src="images/logo/resources-arzamas.svg">
+          <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Логотип Arzamas">
         </a>
         <a class="resources__link" href="#">
-          <img class="resources__logo" src="images/logo/resources-n1.svg">
+          <img class="resources__logo" src="images/logo/resources-n1.svg" alt="Логотип N+1">
         </a>
         <a class="resources__link" href="#">
-          <img class="resources__logo" src="images/logo/resources-strelka.svg">
+          <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Логотип Strelka">
         </a>
         <a class="resources__link" href="#">
-          <img class="resources__logo" src="images/logo/resources-polka.svg">
+          <img class="resources__logo" src="images/logo/resources-polka.svg" alt="Логотип Polka">
         </a>
       </div>
     </section>
