--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a class="header__link" href="#">Узнать &rarr;</a>
     </p>
     <img class="header__main-illustration" src="images/header-image.png" alt="Картина Опять двойка">
-    <div class="header__square-pic rotation__animation"></div>
+    <div class="header__square-pic rotation"></div>
   </header>
   <main class="content">
     <section id="description">
@@ -211,7 +211,7 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
-      <img class="kaufman__triangle rotation__animation" src="images/kaufman-triangle.svg" alt="Треугольник">
+      <img class="kaufman__triangle rotation" src="images/kaufman-triangle.svg" alt="Треугольник">
     </section>
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
