--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <a class="footer__column-link" href="#">
           <img class="footer__social-icon" src="images/vk_color_white.svg" alt="иконка вк">ВКонтакте
         </a>
-        <a class="footer__column-link footer__column_content_social_link" href="#">
+        <a class="footer__column-link" href="#">
           <img class="footer__social-icon" src="images/tiktok-icon.svg" alt="иконка тикток">TikTok
         </a>
       </div>
