--- a/index.html
+++ b/index.html
@@ -249,13 +249,13 @@
       <div class="footer__column footer__column_content_social">
         <h2 class="footer__column-heading">Соцсети</h2>
         <a class="footer__column-link" href="#">
-          <img class="footer__social-icon" src="images/youtube-icon.svg" alt="иконка ютуб">YouTube
+          <img class="footer__social-icon" src="../../../WebstormProjects/cinema/images/youtube-icon.svg" alt="иконка ютуб">YouTube
         </a>
         <a class="footer__column-link" href="#">
-          <img class="footer__social-icon" src="images/vk_color_white.svg" alt="иконка вк">ВКонтакте
+          <img class="footer__social-icon" src="../../../WebstormProjects/cinema/images/vk_color_white.svg" alt="иконка вк">ВКонтакте
         </a>
         <a class="footer__column-link" href="#">
-          <img class="footer__social-icon" src="images/tiktok-icon.svg" alt="иконка тикток">TikTok
+          <img class="footer__social-icon" src="../../../WebstormProjects/cinema/images/tiktok-icon.svg" alt="иконка тикток">TikTok
         </a>
       </div>
     </div>
